--- a/src/Components/ChangeThemeButton/ChangeThemeButton.scss
+++ b/src/Components/ChangeThemeButton/ChangeThemeButton.scss
@@ -1,11 +1,12 @@
-.buttonThemeLight {
+.lightButtonTheme {
     padding: 10px;
     border-radius: 4px;
     background-color: ghostwhite;
 }
 
-.buttonThemeDark{
+.darkButtonTheme{
     background-color: #3D6191;
     padding: 10px;
     border-radius: 4px;
+    color: ghostwhite;
 }
