--- a/src/Components/Weather/components/DailyWeather/DailyWeather.css
+++ b/src/Components/Weather/components/DailyWeather/DailyWeather.css
@@ -1,11 +1,21 @@
-.weatherCard{
+.weatherCardLight{
     display: flex;
     flex-direction: column;
     align-items: center;
     border-radius: 15px;
     width: 135px;
     padding: 10px;
-    background-color: white;
+    background-color: #fff;
+}
+
+.weatherCardDark{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 15px;
+    width: 135px;
+    padding: 10px;
+    background-color: #ccd9ff;
 }
 
 .weatherTextTop{
