--- a/src/Components/Weather/components/DailyWeatherList/DailyWeatherList.css
+++ b/src/Components/Weather/components/DailyWeatherList/DailyWeatherList.css
@@ -1,4 +1,4 @@
-.weatherList{
+.weatherListLight{
     display: flex;
     justify-content: space-around;
     flex-direction: row;
@@ -7,6 +7,11 @@
     background-color: whitesmoke;
 }
 
-.dark {
-    background-color: #3D6191;
+.weatherListDark{
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+    padding: 10px 0;
+    width: 450px;
+    background-color: #4080bf;
 }
