--- a/src/Components/Calculator/Calculator.css
+++ b/src/Components/Calculator/Calculator.css
@@ -1,3 +1,33 @@
 .calculatorWindow{
     width: 800px;
 }
+
+.lightThemeCalculatorWindow {
+    background-color: #fff;
+}
+
+.darkThemeCalculatorWindow{
+    background-color: #204060;
+}
+
+.lightThemeResetButton {
+    background-color: #fff;
+    padding: 5px;
+    border-radius: 3px;
+}
+
+.darkThemeResetButton{
+    background-color: #3D6191;
+    color: ghostwhite;
+    padding: 5px;
+    border-radius: 3px;
+}
+
+.lightThemeInput {
+    background-color: #fff;
+}
+
+.darkThemeInput{
+    background-color: #4080bf;
+    color: ghostwhite;
+}
