--- a/src/Components/NavigationBar/NavigationBar.scss
+++ b/src/Components/NavigationBar/NavigationBar.scss
@@ -5,7 +5,15 @@
     gap: 20px;
     margin-top: 5px;
 
-    &__tab {
+    &--light{
+        background-color: #fff;
+    }
+
+    &--dark{
+        background-color: #204060;
+    }
+
+    &__tab--light {
         font-size: 20px;
         text-decoration: none;
         color: gray;
@@ -16,9 +24,26 @@
             border-bottom: 3px solid green;
         }
     }
-}
 
-.navbar__tab--selected{
-    border-bottom: 3px solid green;
-    color: black;
+    &__tab--dark {
+        font-size: 20px;
+        text-decoration: none;
+        color: #b3cce6;
+        padding-bottom: 10px;
+        border-bottom: 3px solid transparent;
+
+        &:hover{
+            border-bottom: 3px solid #1a53ff;
+        }
+    }
+
+    &__tab--selected--light {
+        border-bottom: 3px solid green;
+        color: black;
+    }
+
+    &__tab--selected--dark {
+        border-bottom: 3px solid #1a53ff;
+        color: ghostwhite;
+    }
 }
