--- a/src/Components/ChangeThemeButton/ChangeThemeButton.scss
+++ b/src/Components/ChangeThemeButton/ChangeThemeButton.scss
@@ -1,12 +1,13 @@
-.lightButtonTheme {
+.buttonThemeBasicStyles{
     padding: 10px;
     border-radius: 4px;
+}
+
+.lightButtonTheme{
     background-color: ghostwhite;
 }
 
 .darkButtonTheme{
     background-color: #3D6191;
-    padding: 10px;
-    border-radius: 4px;
     color: ghostwhite;
 }
