--- a/src/Components/NavigationBar/NavigationBar.scss
+++ b/src/Components/NavigationBar/NavigationBar.scss
@@ -13,12 +13,15 @@
         background-color: #204060;
     }
 
-    &__tab--light {
+    &__tab{
         font-size: 20px;
         text-decoration: none;
-        color: gray;
         padding-bottom: 10px;
         border-bottom: 3px solid transparent;
+    }
+
+    &__tab--light {
+        color: gray;
 
         &:hover{
             border-bottom: 3px solid green;
@@ -26,11 +29,7 @@
     }
 
     &__tab--dark {
-        font-size: 20px;
-        text-decoration: none;
         color: #b3cce6;
-        padding-bottom: 10px;
-        border-bottom: 3px solid transparent;
 
         &:hover{
             border-bottom: 3px solid #1a53ff;
