--- a/src/Components/Weather/components/DailyWeatherList/DailyWeatherList.css
+++ b/src/Components/Weather/components/DailyWeatherList/DailyWeatherList.css
@@ -1,17 +1,15 @@
-.weatherListLight{
+.weatherListBasicStyles{
     display: flex;
     justify-content: space-around;
     flex-direction: row;
     padding: 10px 0;
     width: 450px;
+}
+
+.weatherListLight{
     background-color: whitesmoke;
 }
 
 .weatherListDark{
-    display: flex;
-    justify-content: space-around;
-    flex-direction: row;
-    padding: 10px 0;
-    width: 450px;
     background-color: #4080bf;
 }
