--- a/src/Components/ChangeThemeButton/ChangeThemeButton.scss
+++ b/src/Components/ChangeThemeButton/ChangeThemeButton.scss
@@ -1,13 +1,11 @@
-.buttonThemeBasicStyles{
+.changeThemeButton{
     padding: 10px;
     border-radius: 4px;
-}
-
-.lightButtonTheme{
-    background-color: ghostwhite;
-}
-
-.darkButtonTheme{
-    background-color: #3D6191;
-    color: ghostwhite;
+    &--Light{
+        background-color: ghostwhite;
+    }
+    &--Dark{
+        background-color: #3D6191;
+        color: ghostwhite;
+    }
 }
