--- a/src/Components/NavigationBar/NavigationBar.scss
+++ b/src/Components/NavigationBar/NavigationBar.scss
@@ -26,6 +26,10 @@
         &:hover{
             border-bottom: 3px solid green;
         }
+        &--selected{
+            border-bottom: 3px solid green;
+            color: black;
+        }
     }
 
     &__tab--dark {
@@ -34,15 +38,9 @@
         &:hover{
             border-bottom: 3px solid #1a53ff;
         }
-    }
-
-    &__tab--selected--light {
-        border-bottom: 3px solid green;
-        color: black;
-    }
-
-    &__tab--selected--dark {
-        border-bottom: 3px solid #1a53ff;
-        color: ghostwhite;
+        &--selected{
+            border-bottom: 3px solid #1a53ff;
+            color: ghostwhite;
+        }
     }
 }
